# bidsi

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  bidsi.html  bidsi_config.example.toml  index.html  pyproject.toml  search.js
.github/workflows/: test.yaml
bidsi/: algorithms.html
src/bidsi/: __init__.py  algorithms.py  bids_config.py  bids_model.py  bids_writer.py  report.py
tests/: test_bids_config.py  test_bids_model.py  test_fibonacci.py
